--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,17 +8,17 @@
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 3rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
 .footer {
   width: 100%;
-  height: 100px;
+  height: 40px;
   border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
@@ -35,31 +35,10 @@
   align-items: center;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .code {
@@ -67,8 +46,7 @@
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
@@ -92,9 +70,7 @@
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
+.card:hover, .card:focus, .card:active {
   color: #0070f3;
   border-color: #0070f3;
 }
@@ -114,9 +90,86 @@
   height: 1em;
 }
 
+.imageContainer {
+  display: grid;
+  max-width: min(80%, 1024px);
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  grid-auto-rows: auto;
+  padding: 3rem 0;
+}
+
+.imageItem {
+  background: #fff;
+  padding: 10px;
+  margin-bottom: 5px;
+  border-radius: 3px;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+}
+
+.imageItem:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  transition-duration: 0.3s;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
+
+.imageContainer img {
+  width: 100%;
+}
+
+.credit {
+  font-style: italic;
+  font-size: 0.8rem;
+  color: #555555;
+}
+
+.inputContainer {
+  display: flex;
+  position: relative;
+  border-bottom: 2px solid black;
+  transition-duration: 0.4s;
+  padding: 5px;
+  border-radius: 6px;
+  margin: 20px;
+  box-shadow: rgba(0, 0, 0, 0.063) 0px 0.9px 1.2px, rgba(0, 0, 0, 0.07) 0px 2.1px 2.9px, rgba(0, 0, 0, 0.07) 0px 3.9px 5.5px, rgba(0, 0, 0, 0.075) 0px 6.9px 9.8px, rgba(0, 0, 0, 0.09) 0px 13px 18.4px, rgba(0, 0, 0, 0.17) 0px 31px 44px, rgba(0, 0, 0, 0.1) 0px -5px 15px;
+}
+
+.inputContainer:hover, .inputContainer:focus {
+  transform: scale(1.025);
+}
+
+.inputField {
+  font-size: 32px;
+  height: 60px;
+  width: 100%;
+  text-align: center;
+  border: 0;
+  outline: none;
+}
+
+.crossIcon {
+  font-size: 28px;
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  outline: none;
+}
+
+.searchIcon {
+  font-size: 28px;
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  outline: none;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+  .inputField {
+    font-size: 28px;
   }
 }
