--- a/styles/SelectImage.module.css
+++ b/styles/SelectImage.module.css
@@ -1,9 +1,36 @@
+.renderImg {
+  margin: auto;
+  position: relative;
+  width: fit-content;
+}
+
 .image {
   display: block;
-  padding: 10px;
-  margin-left: auto;
-  margin-right: auto;
   max-height: max(600px, 60vh);
-  width: 100%;
   object-fit: contain;
+}
+
+.renderText {
+  position: absolute;
+  bottom: 0;
+  padding: 20px 80px;
+  text-align: center;
+  background: #ffffff6b;
+  font-size: 28px;
+  width: 100%;
+  color: black;
+  font-weight: bold;
+}
+
+.downloadBtn {
+  padding: 10px;
+  margin: 10px;
+  min-width: 300px;
+  border: 1px solid #c7c7c7;
+  border-radius: 6px;
+  font-weight: bold;
+  position: sticky;
+  z-index: 1;
+  cursor: pointer;
+  top: 10px;
 }
