--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,7 @@
-html,
-body {
+html, body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -13,4 +11,123 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+/* Homepage */
+
+.container-app {
+  min-height: 100vh;
+  padding: 0 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.container-app>.main {
+  flex-grow: 1;
+}
+
+.left-part {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.right-part {
+  padding-bottom: 2rem;
+  width: 100%;
+}
+
+.footer {
+  width: 100%;
+  height: 40px;
+  border-top: 1px solid #eaeaea;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer img {
+  margin-left: 0.5rem;
+}
+
+.footer a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  height: 1em;
+}
+
+.img {
+  transition: all 1s ease-in;
+  overflow: hidden;
+}
+
+.img-visible {
+  opacity: 1;
+  max-height: 1000px;
+}
+
+.img-hidden {
+  opacity: 0.5;
+  max-height: 0;
+}
+
+.credit {
+  font-style: italic;
+  font-size: 0.8rem;
+  color: #555555;
+}
+
+.link {
+  cursor: pointer;
+}
+
+.link:hover, .link:focus {
+  text-decoration: underline;
+}
+
+@media (min-width: 768px) {
+  .right-part {
+    padding: 2rem;
+    height: calc(100vh - 3rem);
+    overflow: auto;
+  }
+  .left-part {
+    padding: 2rem;
+  }
+}
+
+/* Generated image page */
+
+.render-img {
+  margin: auto;
+  position: relative;
+  display: block;
+}
+
+.canvas-image {
+  display: block;
+  width: 100%;
+}
+
+.render-text {
+  position: absolute;
+  bottom: 3vw;
+  padding: calc(1.8vw + 1vh) calc(1.8vw + 1vh);
+  text-align: center;
+  background: #ffffff8c;
+  font-size: calc(1.8vw + 1vh);
+  white-space: pre-wrap;
+  width: 100%;
+  color: black;
+  font-weight: bold;
+}
+
+.download-btn {
+  margin: 10px;
+  position: sticky;
+  z-index: 1;
+  top: 10px;
 }
