--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,9 @@
-html, body {
+html,
+body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -22,7 +24,7 @@ a {
   flex-direction: column;
 }
 
-.container-app>.main {
+.container-app > .main {
   flex-grow: 1;
 }
 
@@ -42,7 +44,7 @@ a {
 }
 
 .left-part .search-form {
-  position: relative
+  position: relative;
 }
 
 .left-part .search-form .close.icon {
@@ -112,7 +114,8 @@ a {
   cursor: pointer;
 }
 
-.link:hover, .link:focus {
+.link:hover,
+.link:focus {
   text-decoration: underline;
 }
 
